# expenses-web

./: .gitignore  README.md  alembic.ini  config.py  csrf.py  csv_utils.py  database.py  fx_rates.py  legacy_sqlite_import.py  main.py  models.py  periods.py  pyproject.toml  recurrence.py  scheduler.py  schemas.py  services.py  start.sh
alembic/: env.py
alembic/versions/: 202405291200_initial.py  20241111000000_add_kind_to_transactions.py  202512141700_add_budgets.py  202512151200_add_balance_anchors.py  202512151600_point_in_time_balance_anchors.py  202512161600_add_recurring_currency_and_transaction_fx_fields.py  202512161630_normalize_currency_code_case.py  202512161700_add_tags.py  202512170900_add_rules.py  202512170910_budget_templates_and_overrides.py  202512181200_add_reimbursements_and_allocations.py
data/: expenses.db
static/css/: main.css
static/js/: app.js  dateRangePicker.jsx
templates/: admin.html  admin_import.html  admin_import_sqlite.html  base.html  budgets.html  categories.html  dashboard.html  insights.html  macros.html  recurring.html  recurring_occurrences.html  report.html  report_builder.html  rules.html  tag_details.html  tags.html  transaction_edit.html  transactions.html  transactions_deleted.html
templates/components/: _donut_chart.html  balance_anchor_edit_modal.html  balance_anchor_modal.html  category_modal.html  csv_preview.html  donut.html  insights_budget.html  (+16 more)
tests/: test_balance_anchors.py  test_budget_templates.py  test_ingest.py  test_modal_css.py  test_recurrence.py  test_reimbursements.py  test_rules.py  test_tags.py
