[project]
name = "expenses-web"
version = "0.1.0"
description = "A lightweight, mobile-first expense tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "tzdata>=2024.1",
    "weasyprint>=66.0",
    "pytest>=9.0.0",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.1.0"]
